# rust-axum-template

./: Cargo.toml  Dockerfile  LICENSE  README.md  compose.yml
src/: main.rs
src/api/v1/: mod.rs
src/models/: user.rs
src/utils/: mod.rs  trace.rs
